src/nl/p4lang/P4.bnf
{
  parserClass="nl.p4lang.parser.P4Parser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="P4"
  psiImplClassSuffix="Impl"
  psiPackage="nl.p4lang.psi"
  psiImplPackage="nl.p4lang.psi.impl"

  elementTypeHolderClass="nl.p4lang.psi.P4Types"
  elementTypeClass="nl.p4lang.psi.P4ElementType"
  tokenTypeClass="nl.p4lang.psi.P4TokenType"
}


// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L416
header_type_declaration ::=
   header_type header_type_name { header_dec_body }

header_dec_body ::=
    fields { field_dec + }
    [ length : length_exp ; ]
    [ max_length : const_value ; ]

field_dec ::= field_name : bit_width [ ( field_mod ) ];
field_mod ::= signed | saturating | field_mod , field_mod
length_bin_op ::= "+" | - | "*" | << | >>
length_exp ::=
    const_value |
    field_name |
    length_exp length_bin_op length_exp |
    ( length_exp )

bit_width ::= const_value | "*"
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L435




// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L305
const_value ::= [ "+" | - ] [ width_spec ] unsigned_value
unsigned_value ::= binary_value | decimal_value | hexadecimal_value

binary_value ::=  binary_base binary_digit+
decimal_value ::= decimal_digit+
hexadecimal_value ::= hexadecimal_base hexadecimal_digit+

binary_base ::= 0b | 0B
hexadecimal_base ::= 0x | 0X

binary_digit ::= _ | 0 | 1
decimal_digit ::= binary_digit | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
hexadecimal_digit ::=
    decimal_digit | a | A | b | B | c | C | d | D | e | E | f | F

width_spec ::= decimal_digit+ '
field_value ::= const_value
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L323



// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L561
instance_declaration ::= header_instance | metadata_instance
header_instance ::= scalar_instance | array_instance
scalar_instance ::= header header_type_name instance_name ;
array_instance ::=
    header header_type_name
        instance_name "[" const_value "]" ;

metadata_instance ::=
   metadata header_type_name
       instance_name [ metadata_initializer ] | ;

metadata_initializer ::= { [ field_name : field_value ; ] + }
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L574



// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L676
header_ref ::= instance_name | instance_name "[" index "]"
index ::= const_value | last
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L679



// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L685
field_ref ::= header_ref . field_name
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L687


// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L718
field_list_declaration ::=
    field_list field_list_name {
        [ field_list_entry ; ] +
    }

field_list_entry ::=
field_ref | header_ref | field_value | field_list_name | payload
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L726



// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L766
field_list_calculation_declaration ::=
    field_list_calculation field_list_calculation_name {
        input {
            [ field_list_name ; ] +
        }
        algorithm : stream_function_algorithm_name ;
        output_width : const_value ;
}
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L775



// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L827
calculated_field_declaration ::=
    calculated_field field_ref { update_verify_spec + }

update_verify_spec ::=
    update_or_verify field_list_calculation_name [ if_cond ] ;

update_or_verify ::= update | verify
if_cond ::= if ( calc_bool_cond )
calc_bool_cond ::=
    valid ( header_ref | field_ref ) |
field_ref == field_value
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L839



// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1017
value_set_declaration ::= parser_value_set value_set_name;
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1019


// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1032
parser_function_declaration ::=
    parser parser_state_name { parser_function_body }

parser_function_body ::=
    extract_or_set_statement*
    return_statement

extract_or_set_statement ::= extract_statement | set_statement
extract_statement ::= extract ( header_extract_ref );
header_extract_ref ::=
     instance_name |
     instance_name "[" header_extract_index "]"

header_extract_index ::= const_value | next

set_statement ::= set_metadata ( field_ref, metadata_expr ) ;
metadata_expr ::= field_value | field_or_data_ref

return_statement ::=
    return_value_type |
    return select ( select_exp ) { case_entry + }

return_value_type ::=
    return parser_state_name ; |
    return control_function_name ; |
    parse_error parser_exception_name ;

case_entry ::= value_list : case_return_value_type ;
value_list ::= value_or_masked [ , value_or_masked ]* | default

case_return_value_type ::=
    parser_state_name |
    control_function_name |
    parse_error parser_exception_name

value_or_masked ::=
    field_value | field_value mask field_value | value_set_name

select_exp ::= field_or_data_ref [, field_or_data_ref] *
field_or_data_ref ::=
    field_ref |
    latest.field_name |
    current( const_value , const_value )
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1076


// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1144
parser_exception_declaration ::=
    parser_exception parser_exception_name {
        set_statement *
        return_or_drop ;
    }

return_or_drop ::= return_to_control | parser_drop
return_to_control ::= return control_function_name
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1153


// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1372
counter_declaration ::=
    counter counter_name {
        type : counter_type ;
        [ direct_or_static ; ]
        [ instance_count : const_expr ; ]
        [ min_width : const_expr ; ]
        [ saturating ; ]
    }

counter_type ::= bytes | packets | packets_and_bytes
direct_or_static ::= direct_attribute | static_attribute
direct_attribute ::= direct : table_name
static_attribute ::= static : table_name
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1386



// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1440
meter_declaration ::=
    meter meter_name {
        type : meter_type ;
        [ result : field_ref ; ]
        [ direct_or_static ; ]
        [ instance_count : const_expr ; ]
    }

meter_type ::= bytes | packets
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1450



// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1513
register_declaration ::=
    register register_name {
        width_declaration ;
        [ direct_or_static ; ]
        [ instance_count : const_value ; ]
        [ attribute_list ; ]
    }

width_declaration ::= width : const_value ;

attribute_list ::= attributes : attr_entry
attr_entry ::= signed | saturating | attr_entry , attr_entry
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L1526


// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L2552
action_function_declaration ::=
    action action_header { action_statement * }

action_header ::= action_name "(" [ param_list ] ")"
param_list ::= param_name [, param_name]*
action_statement ::= action_name "(" [ arg [, arg]* ] ")" ;
arg ::= param_name | field_value | field_ref | header_ref
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L2560


// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L2657

action_profile_declaration ::=
    action_profile action_profile_name {
        action_specification
        [ size : const_value ; ]
	[ dynamic_action_selection : selector_name ; ]
    }

action_specification ::=
    actions { [ action_name ] + }

action_selector_declaration ::=
    action_selector selector_name {
        selection_key : field_list_calculation_name ;
    }
// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L2674


// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L2711
table_declaration ::=
    table table_name {
        [ reads { field_match + } ]
        table_actions
        [ min_size : const_value ; ]
        [ max_size : const_value ; ]
        [ size : const_value ; ]
	[ support_timeout : true | false ; ]
    }

field_match ::= field_or_masked_ref : field_match_type ;
field_or_masked_ref ::=
    header_ref | header_ref "." valid | field_ref | field_ref mask const_value

field_match_type ::= exact | ternary | lpm | range | valid

table_actions ::=
    action_specification | action_profile_specification

action_specification ::=
    actions { [ action_name ] + }

action_profile_specification ::=
    action_profile : action_profile_name

// https://github.com/p4lang/p4-spec/blob/master/p4-14/v1.0.4/tex/p4.pt#L2738
