src/nl/p4lang/parser/P4Parser.java
// This is a generated file. Not intended for manual editing.
package nl.p4lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static nl.p4lang.psi.P4Types.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class P4Parser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ACTION_CASE) {
      r = action_case(b, 0);
    }
    else if (t == ACTION_FUNCTION_DECLARATION) {
      r = action_function_declaration(b, 0);
    }
    else if (t == ACTION_HEADER) {
      r = action_header(b, 0);
    }
    else if (t == ACTION_NAME) {
      r = action_name(b, 0);
    }
    else if (t == ACTION_OR_DEFAULT) {
      r = action_or_default(b, 0);
    }
    else if (t == ACTION_PROFILE_DECLARATION) {
      r = action_profile_declaration(b, 0);
    }
    else if (t == ACTION_PROFILE_NAME) {
      r = action_profile_name(b, 0);
    }
    else if (t == ACTION_PROFILE_SPECIFICATION) {
      r = action_profile_specification(b, 0);
    }
    else if (t == ACTION_SELECTOR_DECLARATION) {
      r = action_selector_declaration(b, 0);
    }
    else if (t == ACTION_SPECIFICATION) {
      r = action_specification(b, 0);
    }
    else if (t == ACTION_STATEMENT) {
      r = action_statement(b, 0);
    }
    else if (t == APPLY_AND_SELECT_BLOCK) {
      r = apply_and_select_block(b, 0);
    }
    else if (t == APPLY_TABLE_CALL) {
      r = apply_table_call(b, 0);
    }
    else if (t == ARG) {
      r = arg(b, 0);
    }
    else if (t == ARRAY_INSTANCE) {
      r = array_instance(b, 0);
    }
    else if (t == ATTR_ENTRY) {
      r = attr_entry(b, 0);
    }
    else if (t == ATTRIBUTE_LIST) {
      r = attribute_list(b, 0);
    }
    else if (t == BIN_OP) {
      r = bin_op(b, 0);
    }
    else if (t == BINARY_BASE) {
      r = binary_base(b, 0);
    }
    else if (t == BINARY_DIGIT) {
      r = binary_digit(b, 0);
    }
    else if (t == BINARY_VALUE) {
      r = binary_value(b, 0);
    }
    else if (t == BIT_WIDTH) {
      r = bit_width(b, 0);
    }
    else if (t == BOOL_EXPR) {
      r = bool_expr(b, 0);
    }
    else if (t == BOOL_OP) {
      r = bool_op(b, 0);
    }
    else if (t == CALC_BOOL_COND) {
      r = calc_bool_cond(b, 0);
    }
    else if (t == CALCULATED_FIELD_DECLARATION) {
      r = calculated_field_declaration(b, 0);
    }
    else if (t == CASE_ENTRY) {
      r = case_entry(b, 0);
    }
    else if (t == CASE_LIST) {
      r = case_list(b, 0);
    }
    else if (t == CASE_RETURN_VALUE_TYPE) {
      r = case_return_value_type(b, 0);
    }
    else if (t == CONST_EXPR) {
      r = const_expr(b, 0);
    }
    else if (t == CONST_VALUE) {
      r = const_value(b, 0);
    }
    else if (t == CONTROL_BLOCK) {
      r = control_block(b, 0);
    }
    else if (t == CONTROL_FN_NAME) {
      r = control_fn_name(b, 0);
    }
    else if (t == CONTROL_FUNCTION_DECLARATION) {
      r = control_function_declaration(b, 0);
    }
    else if (t == CONTROL_FUNCTION_NAME) {
      r = control_function_name(b, 0);
    }
    else if (t == CONTROL_STATEMENT) {
      r = control_statement(b, 0);
    }
    else if (t == COUNTER_DECLARATION) {
      r = counter_declaration(b, 0);
    }
    else if (t == COUNTER_NAME) {
      r = counter_name(b, 0);
    }
    else if (t == COUNTER_TYPE) {
      r = counter_type(b, 0);
    }
    else if (t == DECIMAL_DIGIT) {
      r = decimal_digit(b, 0);
    }
    else if (t == DECIMAL_VALUE) {
      r = decimal_value(b, 0);
    }
    else if (t == DIRECT_ATTRIBUTE) {
      r = direct_attribute(b, 0);
    }
    else if (t == DIRECT_OR_STATIC) {
      r = direct_or_static(b, 0);
    }
    else if (t == ELSE_BLOCK) {
      r = else_block(b, 0);
    }
    else if (t == EXP) {
      r = exp(b, 0);
    }
    else if (t == EXTRACT_OR_SET_STATEMENT) {
      r = extract_or_set_statement(b, 0);
    }
    else if (t == EXTRACT_STATEMENT) {
      r = extract_statement(b, 0);
    }
    else if (t == FIELD_DEC) {
      r = field_dec(b, 0);
    }
    else if (t == FIELD_LIST_CALCULATION_DECLARATION) {
      r = field_list_calculation_declaration(b, 0);
    }
    else if (t == FIELD_LIST_CALCULATION_NAME) {
      r = field_list_calculation_name(b, 0);
    }
    else if (t == FIELD_LIST_DECLARATION) {
      r = field_list_declaration(b, 0);
    }
    else if (t == FIELD_LIST_ENTRY) {
      r = field_list_entry(b, 0);
    }
    else if (t == FIELD_LIST_NAME) {
      r = field_list_name(b, 0);
    }
    else if (t == FIELD_MATCH) {
      r = field_match(b, 0);
    }
    else if (t == FIELD_MATCH_TYPE) {
      r = field_match_type(b, 0);
    }
    else if (t == FIELD_MOD) {
      r = field_mod(b, 0);
    }
    else if (t == FIELD_NAME) {
      r = field_name(b, 0);
    }
    else if (t == FIELD_OR_DATA_REF) {
      r = field_or_data_ref(b, 0);
    }
    else if (t == FIELD_OR_MASKED_REF) {
      r = field_or_masked_ref(b, 0);
    }
    else if (t == FIELD_REF) {
      r = field_ref(b, 0);
    }
    else if (t == FIELD_VALUE) {
      r = field_value(b, 0);
    }
    else if (t == HEADER_DEC_BODY) {
      r = header_dec_body(b, 0);
    }
    else if (t == HEADER_EXTRACT_INDEX) {
      r = header_extract_index(b, 0);
    }
    else if (t == HEADER_EXTRACT_REF) {
      r = header_extract_ref(b, 0);
    }
    else if (t == HEADER_INSTANCE) {
      r = header_instance(b, 0);
    }
    else if (t == HEADER_REF) {
      r = header_ref(b, 0);
    }
    else if (t == HEADER_TYPE_DECLARATION) {
      r = header_type_declaration(b, 0);
    }
    else if (t == HEADER_TYPE_NAME) {
      r = header_type_name(b, 0);
    }
    else if (t == HEXADECIMAL_BASE) {
      r = hexadecimal_base(b, 0);
    }
    else if (t == HEXADECIMAL_DIGIT) {
      r = hexadecimal_digit(b, 0);
    }
    else if (t == HEXADECIMAL_VALUE) {
      r = hexadecimal_value(b, 0);
    }
    else if (t == HIT_MISS_CASE) {
      r = hit_miss_case(b, 0);
    }
    else if (t == HIT_OR_MISS) {
      r = hit_or_miss(b, 0);
    }
    else if (t == IF_COND) {
      r = if_cond(b, 0);
    }
    else if (t == IF_ELSE_STATEMENT) {
      r = if_else_statement(b, 0);
    }
    else if (t == INDEX) {
      r = index(b, 0);
    }
    else if (t == INSTANCE_DECLARATION) {
      r = instance_declaration(b, 0);
    }
    else if (t == INSTANCE_NAME) {
      r = instance_name(b, 0);
    }
    else if (t == LENGTH_BIN_OP) {
      r = length_bin_op(b, 0);
    }
    else if (t == LENGTH_EXP) {
      r = length_exp(b, 0);
    }
    else if (t == LETTER) {
      r = letter(b, 0);
    }
    else if (t == METADATA_EXPR) {
      r = metadata_expr(b, 0);
    }
    else if (t == METADATA_INITIALIZER) {
      r = metadata_initializer(b, 0);
    }
    else if (t == METADATA_INSTANCE) {
      r = metadata_instance(b, 0);
    }
    else if (t == METER_DECLARATION) {
      r = meter_declaration(b, 0);
    }
    else if (t == METER_NAME) {
      r = meter_name(b, 0);
    }
    else if (t == METER_TYPE) {
      r = meter_type(b, 0);
    }
    else if (t == NAME_TEXTUAL) {
      r = name_textual(b, 0);
    }
    else if (t == P_4_DECLARATION) {
      r = p4_declaration(b, 0);
    }
    else if (t == PARAM_LIST) {
      r = param_list(b, 0);
    }
    else if (t == PARAM_NAME) {
      r = param_name(b, 0);
    }
    else if (t == PARSER_EXCEPTION_DECLARATION) {
      r = parser_exception_declaration(b, 0);
    }
    else if (t == PARSER_EXCEPTION_NAME) {
      r = parser_exception_name(b, 0);
    }
    else if (t == PARSER_FUNCTION_BODY) {
      r = parser_function_body(b, 0);
    }
    else if (t == PARSER_FUNCTION_DECLARATION) {
      r = parser_function_declaration(b, 0);
    }
    else if (t == PARSER_STATE_NAME) {
      r = parser_state_name(b, 0);
    }
    else if (t == REGISTER_DECLARATION) {
      r = register_declaration(b, 0);
    }
    else if (t == REGISTER_NAME) {
      r = register_name(b, 0);
    }
    else if (t == REL_OP) {
      r = rel_op(b, 0);
    }
    else if (t == RETURN_OR_DROP) {
      r = return_or_drop(b, 0);
    }
    else if (t == RETURN_STATEMENT) {
      r = return_statement(b, 0);
    }
    else if (t == RETURN_TO_CONTROL) {
      r = return_to_control(b, 0);
    }
    else if (t == RETURN_VALUE_TYPE) {
      r = return_value_type(b, 0);
    }
    else if (t == SCALAR_INSTANCE) {
      r = scalar_instance(b, 0);
    }
    else if (t == SELECT_EXP) {
      r = select_exp(b, 0);
    }
    else if (t == SELECTOR_NAME) {
      r = selector_name(b, 0);
    }
    else if (t == SET_STATEMENT) {
      r = set_statement(b, 0);
    }
    else if (t == STATIC_ATTRIBUTE) {
      r = static_attribute(b, 0);
    }
    else if (t == STREAM_FUNCTION_ALGORITHM_NAME) {
      r = stream_function_algorithm_name(b, 0);
    }
    else if (t == TABLE_ACTIONS) {
      r = table_actions(b, 0);
    }
    else if (t == TABLE_DECLARATION) {
      r = table_declaration(b, 0);
    }
    else if (t == TABLE_NAME) {
      r = table_name(b, 0);
    }
    else if (t == UN_OP) {
      r = un_op(b, 0);
    }
    else if (t == UNSIGNED_VALUE) {
      r = unsigned_value(b, 0);
    }
    else if (t == UPDATE_OR_VERIFY) {
      r = update_or_verify(b, 0);
    }
    else if (t == UPDATE_VERIFY_SPEC) {
      r = update_verify_spec(b, 0);
    }
    else if (t == VALUE_LIST) {
      r = value_list(b, 0);
    }
    else if (t == VALUE_OR_MASKED) {
      r = value_or_masked(b, 0);
    }
    else if (t == VALUE_SET_DECLARATION) {
      r = value_set_declaration(b, 0);
    }
    else if (t == VALUE_SET_NAME) {
      r = value_set_name(b, 0);
    }
    else if (t == WIDTH_DECLARATION) {
      r = width_declaration(b, 0);
    }
    else if (t == WIDTH_SPEC) {
      r = width_spec(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return p4_program(b, l + 1);
  }

  /* ********************************************************** */
  // action_or_default control_block
  public static boolean action_case(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_case")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTION_CASE, "<action case>");
    r = action_or_default(b, l + 1);
    r = r && control_block(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "action" action_header { action_statement * }
  public static boolean action_function_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_function_declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTION_FUNCTION_DECLARATION, "<action function declaration>");
    r = consumeToken(b, "action");
    r = r && action_header(b, l + 1);
    r = r && action_function_declaration_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // action_statement *
  private static boolean action_function_declaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_function_declaration_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!action_statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "action_function_declaration_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // action_name "(" [ param_list ] ")"
  public static boolean action_header(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_header")) return false;
    if (!nextTokenIs(b, _NAME_TEXTUAL_)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = action_name(b, l + 1);
    r = r && consumeToken(b, "(");
    r = r && action_header_2(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, ACTION_HEADER, r);
    return r;
  }

  // [ param_list ]
  private static boolean action_header_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_header_2")) return false;
    param_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // <name_textual>
  public static boolean action_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_name")) return false;
    if (!nextTokenIs(b, _NAME_TEXTUAL_)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = name_textual(b, l + 1);
    exit_section_(b, m, ACTION_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // action_name | "default"
  public static boolean action_or_default(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_or_default")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTION_OR_DEFAULT, "<action or default>");
    r = action_name(b, l + 1);
    if (!r) r = consumeToken(b, "default");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "action_profile" action_profile_name {
  //         action_specification
  //         [ "size" ":" const_value ";" ]
  // 	[ "dynamic_action_selection" ":" selector_name ";" ]
  //     }
  public static boolean action_profile_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_profile_declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTION_PROFILE_DECLARATION, "<action profile declaration>");
    r = consumeToken(b, "action_profile");
    r = r && action_profile_name(b, l + 1);
    r = r && action_profile_declaration_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // action_specification
  //         [ "size" ":" const_value ";" ]
  // 	[ "dynamic_action_selection" ":" selector_name ";" ]
  private static boolean action_profile_declaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_profile_declaration_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = action_specification(b, l + 1);
    r = r && action_profile_declaration_2_1(b, l + 1);
    r = r && action_profile_declaration_2_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ "size" ":" const_value ";" ]
  private static boolean action_profile_declaration_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_profile_declaration_2_1")) return false;
    action_profile_declaration_2_1_0(b, l + 1);
    return true;
  }

  // "size" ":" const_value ";"
  private static boolean action_profile_declaration_2_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_profile_declaration_2_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "size");
    r = r && consumeToken(b, ":");
    r = r && const_value(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, null, r);
    return r;
  }

  // [ "dynamic_action_selection" ":" selector_name ";" ]
  private static boolean action_profile_declaration_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_profile_declaration_2_2")) return false;
    action_profile_declaration_2_2_0(b, l + 1);
    return true;
  }

  // "dynamic_action_selection" ":" selector_name ";"
  private static boolean action_profile_declaration_2_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_profile_declaration_2_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "dynamic_action_selection");
    r = r && consumeToken(b, ":");
    r = r && selector_name(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // <name_textual>
  public static boolean action_profile_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_profile_name")) return false;
    if (!nextTokenIs(b, _NAME_TEXTUAL_)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = name_textual(b, l + 1);
    exit_section_(b, m, ACTION_PROFILE_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // "action_profile" ":" action_profile_name
  public static boolean action_profile_specification(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_profile_specification")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTION_PROFILE_SPECIFICATION, "<action profile specification>");
    r = consumeToken(b, "action_profile");
    r = r && consumeToken(b, ":");
    r = r && action_profile_name(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "action_selector" selector_name {
  //         "selection_key" ":" <field_list_calculation_name> ";"
  //     }
  public static boolean action_selector_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_selector_declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTION_SELECTOR_DECLARATION, "<action selector declaration>");
    r = consumeToken(b, "action_selector");
    r = r && selector_name(b, l + 1);
    r = r && action_selector_declaration_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // "selection_key" ":" <field_list_calculation_name> ";"
  private static boolean action_selector_declaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_selector_declaration_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "selection_key");
    r = r && consumeToken(b, ":");
    r = r && field_list_calculation_name(b, l + 1);
    r = r && consumeToken(b, ";");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "actions" "{" { [ action_name ] } "}"
  public static boolean action_specification(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_specification")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACTION_SPECIFICATION, "<action specification>");
    r = consumeToken(b, "actions");
    r = r && consumeToken(b, "{");
    r = r && action_specification_2(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ action_name ]
  private static boolean action_specification_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_specification_2")) return false;
    action_name(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // action_name "(" [ arg { ["," arg] } ] ")" ";"
  public static boolean action_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_statement")) return false;
    if (!nextTokenIs(b, _NAME_TEXTUAL_)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = action_name(b, l + 1);
    r = r && consumeToken(b, "(");
    r = r && action_statement_2(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && consumeToken(b, ";");
    exit_section_(b, m, ACTION_STATEMENT, r);
    return r;
  }

  // [ arg { ["," arg] } ]
  private static boolean action_statement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_statement_2")) return false;
    action_statement_2_0(b, l + 1);
    return true;
  }

  // arg { ["," arg] }
  private static boolean action_statement_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_statement_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = arg(b, l + 1);
    r = r && action_statement_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ["," arg]
  private static boolean action_statement_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_statement_2_0_1")) return false;
    action_statement_2_0_1_0(b, l + 1);
    return true;
  }

  // "," arg
  private static boolean action_statement_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "action_statement_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && arg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "apply" "(" table_name ")" { [ case_list ] }
  public static boolean apply_and_select_block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "apply_and_select_block")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, APPLY_AND_SELECT_BLOCK, "<apply and select block>");
    r = consumeToken(b, "apply");
    r = r && consumeToken(b, "(");
    r = r && table_name(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && apply_and_select_block_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ case_list ]
  private static boolean apply_and_select_block_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "apply_and_select_block_4")) return false;
    case_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // "apply" "(" table_name ")" ";"
  public static boolean apply_table_call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "apply_table_call")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, APPLY_TABLE_CALL, "<apply table call>");
    r = consumeToken(b, "apply");
    r = r && consumeToken(b, "(");
    r = r && table_name(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && consumeToken(b, ";");
    exit_section_(b, l, m, r, false, null);
    return r;
  }
